css/index.css
* {
  box-sizing: border-box;
  margin: auto;
  /* text-align: center; */
}

html {
  scroll-behavior: smooth;
}

section img {
  border-radius: 20px;
  margin: 1em;
  width: 80%;
}

div#about {
  /* margin-top: 3em; */
  text-align: center;
  /* margin-bottom: 0.025em;
   */
}

section#about {
  margin-top: 80px;
  min-height: 100vh;
  background-color: #b5838d;
  display: flex;
  justify-content: center;
  align-items: center;
}

section#projects {
  /* margin-top: 80px; */
  min-height: 100vh;
  background-color: #e5989b;
  display: flex;
  justify-content: center;
  align-items: center;
}

section#skills {
  /* margin-top: 80px; */
  min-height: 100vh;
  background-color: #b5838d;
  display: flex;
  justify-content: center;
  align-items: center;
}

section#experience {
  /* margin-top: 80px; */
  min-height: 100vh;
  background-color: #e5989b;
  display: flex;
  justify-content: center;
  align-items: center;
}

section#contacts {
  min-height: 100vh;
  background-color: #b5838d;
  display: flex;
  justify-content: center;
  align-items: center;
}

.experience img {
  height: 110px;
  width: 110px;
}

/* hover overlay */

.project {
  display: block;
  width: 100%;
  height: auto;
  position: relative;
}

.overlay {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: #008CBA;
  overflow: hidden;
  width: 0;
  height: 100%;
  transition: .5s ease;
  opacity: 0.8;
  color: white;
  font-size: bold;
  text-align: center;
}

.project:hover .overlay {
  width: 100%;
}

#experience img {
  max-width: 100%;
  width: 60%;
  object-fit: contain;
}

/* #header{
  background-color: white;
} */

.ab img {
  max-width: 100%;
  width: 90%;
}

/* .form {
  max-width: 90%;
  width: 80%;
} */

span .contact {
  margin-top: 0;
  font-weight: 700;
}

section {
  max-width: 100%;
  text-align: center;
}

